tests/baselines/reference/classWithPredefinedTypesAsNames.errors.txt
==== tests/cases/compiler/classWithPredefinedTypesAsNames.ts (4 errors) ====
    // classes cannot use predefined types as names
    
    class any { }
          ~~~
!!! error TS1057: Class name cannot be 'any'.
    class number { }
          ~~~~~~
!!! error TS1057: Class name cannot be 'number'.
    class boolean { }
          ~~~~~~~
!!! error TS1057: Class name cannot be 'boolean'.
    class string { }
          ~~~~~~
!!! error TS1057: Class name cannot be 'string'.